# LQG

./: EMD.py  HRF.py  build_model.py  compress.py  config.yaml  config.yaml.backup  config_hrf.yaml  config_lqg.yaml  config_mpc.yaml  configreader.py  do.py  gen_ik_solution.py  goal_region.py  history_entry.py  ik.py  k_test.py  kalman.py  kinematics.py  lqg.py  motion_validator.py  mpc.py  obstacle.py  path.txt  path_evaluator.py  path_planner.py  path_planning_interface.py  paths.txt  plan_adjuster.py  play_video.py  plot.py  plot_all.py  plot_stats.py  readme.txt  rename.py  serializer.py  simulator.py  test.urdf  test_path.txt  trajopt_test.py  util_py.py
1/histograms/: stats.yaml
backup/: stats.yaml
environment/: env.xml  env_4dof.xml  env_4dof_no_obstacles.xml  env_8dof.xml  test_6dof.urdf
model/: link_dimensions.xacro  model.dae  model.urdf  model.xacro  model.xml  model3D.xml  model_simple.dae  model_simple.urdf  model_simple.xacro  model_test.xml  modellll.xml  physics.xacro  test.urdf  test.xml  test_2dof.urdf  test_3dof.urdf  test_4dof.urdf  test_6dof.urdf  test_8dof.urdf
obstacles/: obstacles.yaml
src/: Area.cpp  Area.hpp  BoxObstacle.cpp  BoxObstacle.hpp  CMakeLists.txt  DirectedControlSampler.cpp  DirectedControlSampler.hpp  EST_control.cpp  EST_control.hpp  Kinematics.cpp  Kinematics.hpp  Makefile  ManipulatorGoalRegion.cpp  ManipulatorGoalRegion.hpp  ManipulatorSpaceInformation.cpp  ManipulatorSpaceInformation.hpp  MotionValidator.cpp  MotionValidator.hpp  Obstacle.cpp  Obstacle.hpp  SphereObstacle.cpp  SphereObstacle.hpp  Terrain.cpp  Terrain.hpp  collision_checker.cpp  collision_checker.hpp  control_sampler.cpp  control_sampler.hpp  control_space.cpp  control_space.hpp  dynamic_path_planner.cpp  dynamic_path_planner.hpp  integrate.cpp  integrate.hpp  path_planner.cpp  path_planner.hpp  propagator.cpp  propagator.hpp  robot.cpp  robot.hpp  (+14 more)
